Omitting Roadmap & Technology pages; redirs added.

--- a/source/cloud-compliance/global.html.slim
+++ b/source/cloud-compliance/global.html.slim
@@ -57,7 +57,7 @@ section.section-article--med.container-gray-10
               th.sort data-sort="available"
                 span data-tooltip="" aria-haspopup="true" data-fade-in-duration="20" data-v-offset="0" title="Compliant deploys are possible in this geography." Available Now?
               th.sort data-sort="planned"
-                span data-tooltip="" aria-haspopup="true" data-fade-in-duration="20" data-v-offset="0" title="See our roadmap for more details." Planned?
+                span data-tooltip="" aria-haspopup="true" data-fade-in-duration="20" data-v-offset="0" title="Planned features" Planned?
               th.sort data-sort="time" Availability
               / th Description
           tbody.list
