--- a/source/compliant-kubernetes-service/index.html.slim
+++ b/source/compliant-kubernetes-service/index.html.slim
@@ -98,11 +98,11 @@ section.bg-dark.bg-blue-purple-grad id=current_page.data.subnav[2].slug data-mag
       .row
         .columns.small-12
           .container-gray-11.callout--large.drop.group--2x
-            .row
+            .media-object.relative.stack-for-small 
               - if featureCat.has_key?("icon_slug")
-                .columns.small-12.medium-4.large-2.text-right
+                .media-object-section
                   = inline_svg(featureCat.icon_slug, :class => "icon-size--xlarge svg-color--blue")
-              .columns.small-12.medium-8.large-10
+              .media-object-section.media-object--info.main-section.align-self-middle
                 h3.headline-3(id="featureCat_#{featureCat.slug}") #{featureCat["title"]}
                 - if featureCat.has_key?("desc")
                   p = featureCat["desc"]
@@ -181,16 +181,6 @@ section.section-article.container-gray-11 id=current_page.data.subnav[3].slug da
         - cust = data.site.customers[carditem.customer.id]
         .column
           = partial "/partials/content/card-case-study",  :locals => { :cf_customer => cust } 
-
-  /.row.align-center
-  /  .columns.small-12.text-center.group
-  /    h2.headline-3 A shared vision for the future of healthcare
-  /.row.align-center.small-up-1.medium-up-2.large-up-3
-  /  // search by customer slug, must match CF slug strings
-  /  - sorted_customers = data.site.customers.to_a.select { |id, cust| (cust["slug"] == "zipnosis" || cust["slug"] == "cordata" || cust["slug"] == "metabahn" ) }
-  /  - sorted_customers.each do |id, cf_customer|
-  /    .column
-  /      = partial "/partials/content/card-case-study",  :locals => { :cf_customer => cf_customer } 
 
 .strip.strip-small.strip-cks
 section.bg-dark.bg-blue-purple-grad.product-cks id=current_page.data.subnav[4].slug data-magellan-target=current_page.data.subnav[4].slug
