--- a/source/innovation/partials/_subscribe.erb
+++ b/source/innovation/partials/_subscribe.erb
@@ -20,8 +20,9 @@
             <img class="logo-basic" src="//images.ctfassets.net/189dvqdsjh46/4zPUHPDjrGMa4UCKmso8ss/ec71cdd18e29639d0dd3f1858530b4af/logo-stitcher.png" alt="subscribe"/>
         </a>
 
-        <a href="https://goo.gl/app/playmusic?ibi=com.google.PlayMusic&isi=691797987&ius=googleplaymusic&link=https://play.google.com/music/m/Ivinlhscpcxt4ovbaqla72swlru?t%3DHealthcare_Innovators_Podcast" title="Google Play">
+        <a href="https://playmusic.app.goo.gl/?ibi=com.google.PlayMusic&amp;isi=691797987&amp;ius=googleplaymusic&amp;apn=com.google.android.music&amp;link=https://play.google.com/music/m/Ivinlhscpcxt4ovbaqla72swlru?t%3DHealthcare_Innovators_Podcast%26pcampaignid%3DMKT-na-all-co-pr-mu-pod-16" rel="nofollow" title="Google Play">
             <img class="logo-basic" src="//images.ctfassets.net/189dvqdsjh46/2oUStfC3QEm4uSouyK4M6Y/5273b9289e3d993ceb93ae97c23c8af0/logo-googleplay.png" alt="subscribe"/>
         </a>
     </div>
 </div>
+<a href='https://playmusic.app.goo.gl/?ibi=com.google.PlayMusic&amp;isi=691797987&amp;ius=googleplaymusic&amp;apn=com.google.android.music&amp;link=https://play.google.com/music/m/Ivinlhscpcxt4ovbaqla72swlru?t%3DHealthcare_Innovators_Podcast%26pcampaignid%3DMKT-na-all-co-pr-mu-pod-16' rel='nofollow'>
