--- a/source/open-source/policies.html.erb
+++ b/source/open-source/policies.html.erb
@@ -12,11 +12,11 @@ layout: "company"
 <section class="section-article">
     <div class="row align-center">
         <div class="columns small-12 medium-8">
-            <div class="text-center section--header-light-group">
+            <div class="text-center group">
                 <%= inline_svg("icon-git", class: "icon-size--medium svg-color--black") %>
-                <h4>Open Source</h4>
-                <h1>Company Policies for HIPAA Compliance</h1>
-                <h2 class="margin-auto">Handle PHI? Adopt these free 25 policies and be one step closer to HIPAA compliance.</h2>
+                <h4 class="headline-5 spaced-out">Open Source</h4>
+                <h1 class="headline-2">Company Policies for HIPAA Compliance</h1>
+                <p class="lead">Handle PHI? Adopt these free 25 policies and be one step closer to HIPAA compliance.</p>
                 <%= partial "partials/snippets/button", :locals => { :label => "View Policies on Github", :url => "https://github.com/catalyzeio/policies/", :button_classes => "button", :icon => "icon-github-octocat", :icon_align => "left" } %>
             </div>
         </div>
@@ -71,8 +71,8 @@ layout: "company"
     </div>
     <div class="row align-center">
         <div class="columns small-12 medium-8">
-            <div class="section--header-dark-group text-center">
-                <h1>HIPAA Policies</h1>
+            <div class="group text-center">
+                <h2 class="headline-3">HIPAA Policies</h2>
                 <p class="lead color-white">Each policy is included as its own markdown file in case you want to cherry pick specific policies. If you currently have no policies in place, we encourage you to consider utilizing all policies.</p>
             </div>
         </div>
@@ -149,8 +149,8 @@ layout: "company"
 <section class="section-article container-color--gray-light">
     <div class="row align-center">
         <div class="columns small-12 medium-6">
-            <div class="section--header-light-group">
-                <h1>Frequently Asked Questions</h1>
+            <div class="group">
+                <h2 class="headline-3">Frequently Asked Questions</h2>
                 <p class="lead">Who is behind this?</p>
             </div>
             <p><a href="https://datica.com" class="color-talk-alt">Datica Health, Inc.</a>, healthcare's trusted HIPAA-compliant platform.</p>
