--- a/source/press/mediakit.html.erb
+++ b/source/press/mediakit.html.erb
@@ -12,7 +12,7 @@ layout: company
 <section class="section-article container-color--light-gray">
     <div class="row align-center">
         <div class="columns small-12 medium-8">
-            <div class="section--header-light-group text-center">
+            <div class="text-center">
                 <h1 class="headline-1">Media Kit Downloads</h1>
                 <p class="lead">Download Datica brand assets here.</p>
             </div>
