Updated all the button CTAs throughout customer journey. => "Get Started" is the new default. Updated pricing page logos (simpler versions)

--- a/source/cloud-compliance-management-system/index.html.slim
+++ b/source/cloud-compliance-management-system/index.html.slim
@@ -55,7 +55,7 @@ section.masthead.bg-dark.bg-purple-bp-grad.product-ccms.relative id=current_page
           .media-object-section.media-object--info.main-section.align-self-middle
             h1.headline-3.text-bold.margin-bottom-sm Cloud Compliance Management System
             p.lead Know the precise compliance state of your cloud environments
-            = partial "partials/snippets/button", :locals => { :label => "Get Pricing", :url => "##{current_page.data.subnav.last.slug}", :button_classes => "button button--light nomargin step-2", :data_track_group => "compliance", :item_id => "get-ccms-top", :icon => "icon-chevron-down", :icon_align => "right", :expand => "false" }
+            = partial "partials/snippets/button", :locals => { :label => "Get Started", :url => "##{current_page.data.subnav.last.slug}", :button_classes => "button button--light nomargin step-2", :data_track_group => "compliance", :item_id => "get-ccms-top", :icon => "icon-chevron-down", :icon_align => "right", :expand => "false" }
   .row.align-right.relative.z-10
     .columns.small-12.large-9
       .glow-light
