--- a/source/compliant-kubernetes-service/index.html.slim
+++ b/source/compliant-kubernetes-service/index.html.slim
@@ -60,7 +60,7 @@ section.masthead.bg-dark.bg-blue-purple-grad.product-cks.relative id=current_pag
           .media-object-section.media-object--info.main-section.align-self-middle
             h1.headline-3.text-bold.margin-bottom-sm Compliant Kubernetes Service
             p.lead Get the scalable power of Kubernetes in a secure cluster
-            = partial "partials/snippets/button", :locals => { :label => "Get Pricing", :url => "##{current_page.data.subnav.last.slug}", :button_classes => "button button--light nomargin step-2", :data_track_group => "compliance", :item_id => "get-cks-top", :icon => "icon-chevron-down", :icon_align => "right", :expand => "false" }
+            = partial "partials/snippets/button", :locals => { :label => "Get Started", :url => "##{current_page.data.subnav.last.slug}", :button_classes => "button button--light nomargin step-2", :data_track_group => "compliance", :item_id => "get-cks-top", :icon => "icon-chevron-down", :icon_align => "right", :expand => "false" }
   .art
     = partial "partials/snippets/nav-sub-product", :locals => { :parent_url => "/cloud-compliance/" }
     = inline_svg("products-triangles-color", class: "z-5 art-accent step-1")
@@ -141,7 +141,7 @@ section.bg-dark.bg-blue-purple-grad id=current_page.data.subnav[2].slug data-mag
       li
         h3.headline-5.spaced-out.nomargin style="margin-right: 2rem;" Talk to our experts today
       li
-        = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "##{current_page.data.subnav.last.slug}", :button_classes => "button button--light nomargin", :icon => "icon-chevron-down", :data_track_group => "compliance", :item_id => "get-cks-mid" }
+        = partial "partials/snippets/button", :locals => { :label => "Get started", :url => "##{current_page.data.subnav.last.slug}", :button_classes => "button button--light nomargin", :icon => "icon-chevron-down", :data_track_group => "compliance", :item_id => "get-cks-mid" }
 
     /.row.align-center
       .columns.text-center
