Updated customer badges snippet url: /compliance -> /ehr-compliance Closes #119

--- a/source/customer/badges.html.erb
+++ b/source/customer/badges.html.erb
@@ -13,18 +13,6 @@ layout: basic
 <div class="container-color--dark-alt">
     <%= partial "partials/head/header", :locals => { :style => "light" } %>
 </div>
-<section class="custom-sticky custom-sticky--dark show-for-large">
-    <div class="row">
-        <div class="columns small-12 medium-12">
-            <ul>
-                <li><a href="#top" class="active">Customer Badges</a></li>
-                <li><a href="/open-source">Open Source</a></li>
-                <li><a href="http://product.datica.com/" title="Sign in to Datica Products">Customer Sign in</a></li>
-            </ul>
-        </div>
-    </div>
-</section>
-
 <section class="section-article">
   <div class="row align-center">
     <div class="columns small-12 large-8">
@@ -32,11 +20,17 @@ layout: basic
       <img class="float-right" src="/public/img/customer-badges/datica-compliance-badge-dark-@2x.png" width="220" alt="badge" />
       <p class="lead">The Datica compliance badge is for customers to build trust in their products by publicly demonstrating their commitment to compliance. This badge is designed to be added to your website footer but you can add it anywhere on your site or marketing materials.</p>
       <p>When you use the badge, we only ask a few things:</p>
-      <ul>
-        <li><i class="fa-li fa fa-check text--green"></i> Please include a link back to <code>datica.com/compliance?utm_source=customerbadge</code>. That webpage is <em>our</em> best story to help you tell <em>your</em> story.</li>
-        <li><i class="fa-li fa fa-check text--green"></i> Please don't edit the graphic, the text, or colors. If you're looking for something different, hit us up via our support channels and we'll help you out.</li>
-        <li><i class="fa-li fa fa-check text--green"></i> Use it on any marketing or sales materials where you think it will help demonstrate credibility with HIPAA and HITRUST CSF compliance. We are here to help you however we can!</li>
+      <ul class="list-check group">
+        <li> Please include a link back to <code>datica.com/ehr-compliance?utm_source=customerbadge</code>. That webpage is <em>our</em> best story to help you tell <em>your</em> story.</li>
+        <li> Please don't edit the graphic, the text, or colors. If you're looking for something different, hit us up via our support channels and we'll help you out.</li>
+        <li> Use it on any marketing or sales materials where you think it will help demonstrate credibility with HIPAA and HITRUST CSF compliance. We are here to help you however we can!</li>
       </ul>
+      <h3 class="headline-5 spaced-out">Helpful Links</h3>
+      <ul class="no-bullet">
+        <li>
+          <a href="/press/mediakit" title="media kit">Media Kit Downloads</a>
+        </li>
+        <li><a href="https://product.datica.com/" title="Sign in to your dashboard">Customer Sign in</a></li><li><a href="https://help.datica.com/hc/en-us/" title="Documentation &amp; Support for all Datica products">Documentation &amp; Support</a></li><li><a href="https://status.datica.com/" title="System uptime and alerts">System Status</a></li></ul>
     </div>
   </div>
 </section>
@@ -50,22 +44,22 @@ layout: basic
       <div class="callout drop">
         <h4 class="headline-5">Datica Customer Badge — Large, Dark</h4>
         <p><img src="/public/img/customer-badges/datica-compliance-badge-dark-@2x.png" width="220" alt="badge" /></p>
-        <textarea>&lt;a href=&quot;https://datica.com/compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-dark-@2x.png&quot; width=&quot;220&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
+        <textarea>&lt;a href=&quot;https://datica.com/ehr-compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-dark-@2x.png&quot; width=&quot;220&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
       </div>
       <div class="callout drop">
         <h4 class="headline-5">Datica Customer Badge — Small, Dark</h4>
         <p><img src="/public/img/customer-badges/datica-compliance-badge-dark.png" width="120" alt="badge" /></p>
-        <textarea>&lt;a href=&quot;https://datica.com/compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-dark.png&quot; width=&quot;120&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
+        <textarea>&lt;a href=&quot;https://datica.com/ehr-compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-dark.png&quot; width=&quot;120&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
       </div>
       <div class="callout--dark">
         <h4 class="headline-5">Datica Customer Badge — Large, Light</h4>
         <p><img src="/public/img/customer-badges/datica-compliance-badge-light-@2x.png" width="220" alt="badge" /></p>
-        <textarea>&lt;a href=&quot;https://datica.com/compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-light-@2x.png&quot; width=&quot;220&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
+        <textarea>&lt;a href=&quot;https://datica.com/ehr-compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-light-@2x.png&quot; width=&quot;220&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
       </div>
       <div class="callout--dark">
         <h4 class="headline-5">Datica Customer Badge — Small, Light</h4>
         <p><img src="/public/img/customer-badges/datica-compliance-badge-light.png" width="120" alt="badge" /></p>
-        <textarea>&lt;a href=&quot;https://datica.com/compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-light.png&quot; width=&quot;120&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
+        <textarea>&lt;a href=&quot;https://datica.com/ehr-compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-light.png&quot; width=&quot;120&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
       </div>
     </div>
   </div>
