Oops wrong prefix. #119

--- a/source/customer/badges.html.erb
+++ b/source/customer/badges.html.erb
@@ -21,7 +21,7 @@ layout: basic
       <p class="lead">The Datica compliance badge is for customers to build trust in their products by publicly demonstrating their commitment to compliance. This badge is designed to be added to your website footer but you can add it anywhere on your site or marketing materials.</p>
       <p>When you use the badge, we only ask a few things:</p>
       <ul class="list-check group">
-        <li> Please include a link back to <code>datica.com/ehr-compliance?utm_source=customerbadge</code>. That webpage is <em>our</em> best story to help you tell <em>your</em> story.</li>
+        <li> Please include a link back to <code>datica.com/cloud-compliance?utm_source=customerbadge</code>. That webpage is <em>our</em> best story to help you tell <em>your</em> story.</li>
         <li> Please don't edit the graphic, the text, or colors. If you're looking for something different, hit us up via our support channels and we'll help you out.</li>
         <li> Use it on any marketing or sales materials where you think it will help demonstrate credibility with HIPAA and HITRUST CSF compliance. We are here to help you however we can!</li>
       </ul>
@@ -44,22 +44,22 @@ layout: basic
       <div class="callout drop">
         <h4 class="headline-5">Datica Customer Badge — Large, Dark</h4>
         <p><img src="/public/img/customer-badges/datica-compliance-badge-dark-@2x.png" width="220" alt="badge" /></p>
-        <textarea>&lt;a href=&quot;https://datica.com/ehr-compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-dark-@2x.png&quot; width=&quot;220&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
+        <textarea>&lt;a href=&quot;https://datica.com/cloud-compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-dark-@2x.png&quot; width=&quot;220&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
       </div>
       <div class="callout drop">
         <h4 class="headline-5">Datica Customer Badge — Small, Dark</h4>
         <p><img src="/public/img/customer-badges/datica-compliance-badge-dark.png" width="120" alt="badge" /></p>
-        <textarea>&lt;a href=&quot;https://datica.com/ehr-compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-dark.png&quot; width=&quot;120&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
+        <textarea>&lt;a href=&quot;https://datica.com/cloud-compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-dark.png&quot; width=&quot;120&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
       </div>
       <div class="callout--dark">
         <h4 class="headline-5">Datica Customer Badge — Large, Light</h4>
         <p><img src="/public/img/customer-badges/datica-compliance-badge-light-@2x.png" width="220" alt="badge" /></p>
-        <textarea>&lt;a href=&quot;https://datica.com/ehr-compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-light-@2x.png&quot; width=&quot;220&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
+        <textarea>&lt;a href=&quot;https://datica.com/cloud-compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-light-@2x.png&quot; width=&quot;220&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
       </div>
       <div class="callout--dark">
         <h4 class="headline-5">Datica Customer Badge — Small, Light</h4>
         <p><img src="/public/img/customer-badges/datica-compliance-badge-light.png" width="120" alt="badge" /></p>
-        <textarea>&lt;a href=&quot;https://datica.com/ehr-compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-light.png&quot; width=&quot;120&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
+        <textarea>&lt;a href=&quot;https://datica.com/cloud-compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-light.png&quot; width=&quot;120&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
       </div>
     </div>
   </div>
