Updated layout files so html lang="en-us". I think the original code is some old boilerplate.

--- a/source/layouts/article.erb
+++ b/source/layouts/article.erb
@@ -1,6 +1,6 @@
 <%# Article Layout Template - Datica 2017 %>
 <!DOCTYPE html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="en-us">
     <head>
         <%# Meta tags %>
         <%= partial "partials/head/tags" %>
