--- a/source/layouts/company.erb
+++ b/source/layouts/company.erb
@@ -1,6 +1,6 @@
 <%# Company section pages - This template adds subnav at top of company pages (about, blog, etc.). %>
 <!DOCTYPE html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="en-us">
     <head>
         <%# Meta tags %>
         <%= partial "partials/head/tags" %>
