--- a/source/layouts/products.erb
+++ b/source/layouts/products.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="en-us">
 <%# datica Product Family Launch, Feb 2019 %>
     <head>
         <%= partial "partials/head/tags" %>
