Blog feed image check; changefreq updates for content marketing sections.

--- a/source/contentful_templates/academy.html.erb
+++ b/source/contentful_templates/academy.html.erb
@@ -5,6 +5,7 @@ ogType: article
 layout: "basic"
 sharer: true
 customJS: "/public/js/academy-article.js, /public/js/contents.js, /public/js/article.js"
+change_frequency: daily
 ---
 <% p = locals[:item]
 
