--- a/source/contentful_templates/blog.html.slim
+++ b/source/contentful_templates/blog.html.slim
@@ -4,6 +4,7 @@ ogType: article
 sharer: true
 customCSS: "blog-detail"
 customJS: "/public/js/article.js"
+change_frequency: daily
 ---
 ruby:
   p = locals[:item]
