--- a/source/partials/head/_header.slim
+++ b/source/partials/head/_header.slim
@@ -29,7 +29,7 @@ nav.nav data-theme=theme
       span
   ul.menu.nav__container.mobile-toggle-target#nav-target
     li.nav__logo.show-for-large
-      a.nav-logo--link href="/" title="Datica Home" style="padding: 0 1rem;"
+      a.nav-logo--link href="/" title="Datica Home" style="padding: 0 1rem;" data-track="true" data-track-category="nav" data-track-id="home"
         svg id="datica-logo-desktop" class="nav-logo"
           use.symbol-icon xlink:href="#datica-logo-horiz" href="#datica-logo-horiz"
     - nav_collection.each do | id, nav_section |
@@ -38,7 +38,7 @@ nav.nav data-theme=theme
         - if nav_item.section == "Compliance" || nav_item.section == "Integration" ? is_product = true : is_product = false
         - unless nav_item.has_key?("show_in_top_nav") && nav_item.show_in_top_nav == false
           li.nav__item.nav__section id=nav_item.title_short.parameterize
-            a.nav__item-name href=(nav_item.has_key?("section_link_uri") ? nav_item.section_link_uri : nil )
+            a.nav__item-name href=(nav_item.has_key?("section_link_uri") ? nav_item.section_link_uri : nil ) data-track="true" data-track-category="nav" data-track-id="category-#{nav_item.title_short.parameterize}"
               span = nav_item.title_short 
               / .nav__item-summary.hide-for-large = nav_item.summary
             .nav-submenu.z-20 id="subnav-#{nav_item.section.parameterize}"
@@ -47,7 +47,7 @@ nav.nav data-theme=theme
                   h3.headline-4 = nav_item.title
                   p.text-small = nav_item.summary
                   - if nav_item.has_key?("section_link_label")
-                    = current_link_to nav_item.section_link_label, nav_item.section_link_uri, title: nav_item.section_link_label, class: "link-arrow link-arrow--yellow fade-1 show-for-large"
+                    a.link-arrow.link-arrow--yellow.fade-1.show-for-large href=nav_item.section_link_uri title=nav_item.section_link_label data-track="true" data-track-category="nav" data-track-id="section-link-#{nav_item.section.parameterize}" = nav_item.section_link_label
                 - if nav_item.has_key?("child_data")
                   .columns.small-12.large-4.nav__submenu-pane class=(is_product == true ? nil : "shrink-for-large")
                     h4.read-more.text-light.show-for-large = (is_product == true ? "Product Family" : nil)
@@ -55,7 +55,7 @@ nav.nav data-theme=theme
                       - nav_item.child_data.each do | child |
                         li
                           - if is_product == true && child.has_key?("icon")
-                            a href=child.url title="Explore #{child.title}"
+                            a href=child.url title="Explore #{child.title}" data-track="true" data-track-category="nav" data-track-id="page-#{child.title_short.parameterize}"
                               .media-object.nav__product
                                 .media-object-section
                                   svg id="product-#{child.icon}" class="icon-size--medium"
@@ -65,7 +65,7 @@ nav.nav data-theme=theme
                                   h4.nav__product-title = child.title
                                   .nav__product-description.text-small.show-for-large = child.desc
                           - else
-                            = current_link_to child.title, child.url, title: child.desc
+                            a href=child.url title="Explore #{child.title}" data-track="true" data-track-category="nav" data-track-id="page-#{child.url.parameterize}" = child.title
 
                         - if child.has_key?("has_divider") && child.has_divider == true
                           hr.menu-divider
@@ -90,17 +90,17 @@ nav.nav data-theme=theme
                     aside.columns.nav__submenu-pane.small-12.large-4.show-for-large
                       - if nav_item.section_promo.has_key?("cta_image")
                         - if nav_item.section_promo.has_key?("cta_image_small") ? banner = cta_entry.cta_image_small.url : banner = cta_entry.cta_image.url
-                        a href=cta_entry.cta_url title=cta_entry.cta_title
+                        a href=cta_entry.cta_url title=cta_entry.cta_title data-track="true" data-track-category="nav" data-track-id="section-promo-#{nav_item.section.parameterize}"
                           img.lozad.thumbnail alt=cta_entry.cta_title data-src="#{banner}?w=560" src="#{banner}?w=560&q=5" width="280" /
                       - else
                         h4.headline-5.nav--promo = cta_entry.cta_title
                         p.text-small = cta_entry.cta_desc
-                        = partial "partials/snippets/button", :locals => { :label => cta_entry.cta_label, :url => cta_entry.cta_url, :button_classes => "button small success", :data_track_group => "nav", :item_id => "nav-promo-#{path}", :icon => "icon-angle-right", :icon_align => "right" }
+                        = partial "partials/snippets/button", :locals => { :label => cta_entry.cta_label, :url => cta_entry.cta_url, :button_classes => "button small success", :data_track_group => "nav", :item_id => "section-promo-#{nav_item.section.parameterize}", :icon => "icon-angle-right", :icon_align => "right" }
                   - else
                     aside.columns.small-12.large-4.bg-gray-2.nav__submenu-pane.show-for-large
                       h4.headline-5.nav--promo = nav_item.section_promo.title
                       p.text-small = nav_item.section_promo.summary
-                      = partial "partials/snippets/button", :locals => { :label => "Learn More", :url => promo_url, :button_classes => "button small success", :data_track_group => "nav", :item_id => "nav-promo-#{path}", :icon => "icon-angle-right", :icon_align => "right" }
+                      = partial "partials/snippets/button", :locals => { :label => "Learn More", :url => promo_url, :button_classes => "button small success", :data_track_group => "nav", :item_id => "section-promo-#{nav_item.section.parameterize}", :icon => "icon-angle-right", :icon_align => "right" }
     li.nav__item.nav__contact.button-group.stacked-for-small
       = partial "partials/snippets/button", :locals => { :label => "Get Pricing", :url => "/pricing/", :button_classes => "contact-button button small", :item_id => "contact", :data_track_group => "nav", :expand => "false" }
       /| &nbsp;
